# cs344

./: .gitignore
HW1/: CMakeLists.txt  student_func.cu
HW2/: CMakeLists.txt  student_func.cu
